FIX font too small

--- a/docs-src/src/css/custom.css
+++ b/docs-src/src/css/custom.css
@@ -113,7 +113,7 @@ pre code {
 }
 
 .theme-doc-sidebar-item-link-level-2 {
-    font-size: 85%;
+    font-size: 89%;
 }
 
 
